spec/support/edi_files/valid/997/7.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *130125*1000*U*00401*000003310*1*P*>…GS*FA*ANCO*ANDPRE*20130125*1000*1393*X*004010…ST*997*0001…AK1*PC*3359…AK9*A*3*3*3…SE*4*0001…GE*1*1393…IEA*1*000003310…