spec/support/edi_files/invalid/7.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *130103*1000*U*00401*000003244*1*P*>…GS*FA*ANCO*ANDPRE*20130103*1000*1369*X*004010…ST*997*0001…AK1*PC*3318…AK9*A*2*2*2…SE*4*0001…GE*1*1369…IEA*1*000003244…ISA*00*          *00*          *ZZ*ANCO          *ZZ*ANDPRE         *130103*1000*U*00401*000003245*1*P*>…GS*FA*ANCO*ANDPRE*20130103*1000*1370*X*004010…ST*997*0001…AK1*PO*3319…AK9*A*3*3*3…SE*4*0001…GE*1*1370…IEA*1*000003245…